  Ubuntu 20.04. See INSTALL.md "Installation from repository" for details.

* Cool, there's an online review on Linux Uprising, you can read it here:
  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html

Preparing release 2.2

Important changes in 2.2 (2021-01-XX)

This is a maintenance release, bugfixes only.

* Bugfix: Possible crash in transcoder_thread: Decoder object could have been used
          after being freed.
* Bugfix: Stupid blooper. WAV and AIFF size was always calculated for a mono file,
          thus for stereo files only half the correct size.

Important changes in 2.1 (2020-12-14)
  
* Feature: Add BLURAY_VIDEO_FORMAT_2160P (UHD)
* Feature: Implemented in 1.7, removed experimental state for --win_smb_fix now.
           Windows seems to access the files on Samba drives starting at the last 64K segment
           simply when the file is opened. Setting --win_smb_fix=1 will ignore these attempts
           (not decode the file up to this point).
* Feature: --win_smb_fix now defaults to 1 (fix on by default). Has no effect
           if the drive is accessed directly or via Samba from Linux.
* Bugfix: Fixed grammatical error in text: It's "access to", not "access at".
* Bugfix: Did not transcode some source files with invalid DTS.
* Bugfix: Cosmetical - No need to log date/time twice in syslog.
* Bugfix: Cosmetical - Fix man page/online help for --recodesame parameter.
* Bugfix: Report correct segment duration
* Bugfix: Avoid crash if opening next HLS segment failed. Should not ignore this, but report
          it instead and stop transcoding.
* Cosmetical: Log cache close action at trace level
* Cosmetical: Shorter log entry when opening cache files

Important changes in 2.0 (2020-09-13)

Hurray! This is release 2.0!

* Feature: No new features, new release 2.0 after feature freeze.
* Bugfix: Issue #64 - Fixed playback stopping prematurely on some files.

Important changes in 1.99 (2020-07-18)
