@@ -12,6 +12,10 @@ Important changes in 2.2 (2021-01-XX)
 
 This is a maintenance release, bugfixes only.
 
+* Bugfix: Issue #70: Possible crash in Buffer::init: Should not assert if duration is 0
+          (and thus segment count 0). Report internal error and go on.
+* Bugfix: Issue #70: Do not set duration to 0 from cache but leave unchanged. Caused HLS
+          transcoding to fail if more than one transcoder was concurrently started.
 * Bugfix: Possible crash in transcoder_thread: Decoder object could have been used
           after being freed.
 * Bugfix: Stupid blooper. WAV and AIFF size was always calculated for a mono file,
